<resources>
    <string name="app_name">Hotel Monitor</string>
    <string name="default_server_url">https://hotelmonitor-3096.nodechef.com/parse</string>
    <string name="default_app_id">HotelMonitor</string>
    <string name="default_settings_password">password</string>
    <string name="admin_password">shhampton</string>
    <string name="admin_description">Allows for locking the device into kiosk mode</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="action_settings">Settings</string>
    <string name="master_mode">Master Mode</string>
    <string name="master_mode_summary">Switches tablet to Master mode with dashboard</string>
    <string name="server_preference">Server URL</string>
    <string name="server_preference_summary">The URL for the Parse Server that stores all data</string>
    <string name="app_id_preference">Parse App ID</string>
    <string name="app_id__preference_summary">This is the App ID that Parse uses to identify this application</string>
    <string name="settings_password_preference_summary">Change settings password and master setup password</string>
    <string name="settings_password_preference">Settings Password</string>
    <string name="title_activity_settings">Settings</string>
    <string name="register">Register</string>
    <string name="toggle_master_for_user">Toggle Master Mode for Current User</string>
    <string name="stay_over">Stay Over</string>
    <string name="due_out">Due Out</string>
    <string name="overstayed">Overstayed</string>
    <string name="username_label">"Your username is: "</string>

    <string name="select_membership">Select Membership Type</string>
    <string-array name="membership_array">
        <item>Not Member</item>
        <item>Blue</item>
        <item>Silver</item>
        <item>Gold</item>
        <item>Diamond</item>
    </string-array>

    <string-array name="floor_list">
        <item>Floor 1</item>
        <item>Floor 2</item>
        <item>Floor 3</item>
    </string-array>
    <string name="title_activity_client_check_list">Room Checklist</string>
    <string name="section_format">Hello World from section: </string>

    <string name="walls">walls - scuff marks/stains/mildew</string>
    <string name="closet_doors">closet doors - cleaned top to bottom</string>
    <string name="iron_board">iron board - cover, caddie, iron</string>
    <string name="shelves_rod">shelves/rod - all surfaces</string>
    <string name="carpet_floor">carpet/floor - cleaned/vacuumed</string>
    <string name="dresser">dresser/drawers - cleaned top to bottom</string>
    <string name="coffee_station">coffee station - basket, tray, coffee, maker, bucket</string>
    <string name="windows_sills">windows/sills - cleaned top to bottom</string>
    <string name="blanket_linen">blanket/linen - cleaned</string>
    <string name="bedspread">bedspread - cleaned</string>
    <string name="under_bed">under bed - cleaned</string>
    <string name="phones">phones - cleaned top to bottom</string>
    <string name="pictures_mirrors">pictures/mirrors - top to bottom</string>
    <string name="entrance_door">entrance door - threshold, frame, door, hinges, exit sign</string>
    <string name="fridge">fridge - cleaned including shelves inside</string>
    <string name="PTAC">PTAC - wipe off unit and floor</string>
    <string name="lamp_shades">lamp shades - dusted</string>
    <string name="light_fixtures">light fixtures - cleaned</string>
    <string name="vanity">vanity - cleaned top to bottom</string>
    <string name="hair_dryer">hair dryer - cleaned top to bottom/intake dust free</string>
    <string name="toilet">toilet - rim/base/seat cover/underneath/piping</string>
    <string name="tub_walls">tub walls - bleached</string>
    <string name="tub_base">tub base - 32 scidoo</string>
    <string name="shower_head">shower head - porcelain cleaner</string>
    <string name="towels">towels - replaced</string>
    <string name="floor">floor - cleaned</string>
    <string name="maintenance_toilet">Is the toilet flushing?</string>
    <string name="maintenance_shower_drain">Is water draining in the shower?</string>
    <string name="maintenance_shower_curtain">Is the shower curtain undamaged?</string>
    <string name="maintenance_air_conditioning">Is the air conditioning working?</string>
    <string name="maintenance_television">Is the television working/undamaged?</string>
    <string name="maintenance_remote">Is the television remote working/undamaged?</string>
    <string name="maintenance_window_curtain">Is the window curtain undamaged?</string>
    <string name="maintenance_carpet">Is the carpet unstained/undamaged?</string>
    <string name="maintenance_room_lock">Is the room lock working?</string>
    <string name="maintenance_light_bulbs">Are all lightbulbs working?</string>
    <string name="maintenance_thermostat">Is the thermostat working (batteries)?</string>
    <string name="maintenance_hairdryer">Is the hair dryer working?</string>
    <string name="maintenance_bible">Is the bible or guidebook damaged?</string>
    <string name="title_activity_master">Master</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
