<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.milanparikh.hotelmonitor.Client.CheckListFragments.BathroomFragment"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light_fixtures"
        android:id="@+id/bathroom_light_fixtures"
        android:textSize="25sp"
        card_view:layout_constraintBottom_toTopOf="@+id/bathroom_vanity"
        card_view:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        card_view:layout_constraintLeft_toLeftOf="parent" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vanity"
        android:id="@+id/bathroom_vanity"
        android:textSize="25sp"
        card_view:layout_constraintBottom_toTopOf="@+id/bathroom_hair_dryer"
        card_view:layout_constraintTop_toBottomOf="@+id/bathroom_light_fixtures"
        card_view:layout_constraintLeft_toLeftOf="@+id/bathroom_light_fixtures" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hair_dryer"
        android:id="@+id/bathroom_hair_dryer"
        android:textSize="25sp"
        card_view:layout_constraintBottom_toTopOf="@+id/bathroom_phones"
        card_view:layout_constraintTop_toBottomOf="@+id/bathroom_vanity"
        card_view:layout_constraintLeft_toLeftOf="@+id/bathroom_vanity" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phones"
        android:id="@+id/bathroom_phones"
        android:textSize="25sp"
        card_view:layout_constraintBottom_toTopOf="@+id/bathroom_toilet"
        card_view:layout_constraintTop_toBottomOf="@+id/bathroom_hair_dryer"
        card_view:layout_constraintLeft_toLeftOf="@+id/bathroom_hair_dryer" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toilet"
        android:id="@+id/bathroom_toilet"
        android:textSize="25sp"
        card_view:layout_constraintBottom_toTopOf="@+id/bathroom_tub_walls"
        card_view:layout_constraintTop_toBottomOf="@+id/bathroom_phones"
        card_view:layout_constraintLeft_toLeftOf="@+id/bathroom_phones" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tub_walls"
        android:id="@+id/bathroom_tub_walls"
        android:textSize="25sp"
        card_view:layout_constraintBottom_toTopOf="@+id/bathroom_tub_base"
        card_view:layout_constraintTop_toBottomOf="@+id/bathroom_toilet"
        card_view:layout_constraintLeft_toLeftOf="@+id/bathroom_toilet" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tub_base"
        android:id="@+id/bathroom_tub_base"
        android:textSize="25sp"
        card_view:layout_constraintBottom_toTopOf="@+id/bathroom_shower_head"
        card_view:layout_constraintTop_toBottomOf="@+id/bathroom_tub_walls"
        card_view:layout_constraintLeft_toLeftOf="@+id/bathroom_tub_walls" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shower_head"
        android:id="@+id/bathroom_shower_head"
        android:textSize="25sp"
        card_view:layout_constraintBottom_toTopOf="@+id/bathroom_towels"
        card_view:layout_constraintTop_toBottomOf="@+id/bathroom_tub_base"
        card_view:layout_constraintLeft_toLeftOf="@+id/bathroom_tub_base" />

    <CheckBox
        android:id="@+id/bathroom_towels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/towels"
        android:textSize="25sp"
        card_view:layout_constraintBottom_toTopOf="@+id/bathroom_floor"
        card_view:layout_constraintTop_toBottomOf="@+id/bathroom_shower_head"
        card_view:layout_constraintLeft_toLeftOf="@+id/bathroom_shower_head" />

    <CheckBox
        android:id="@+id/bathroom_floor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/floor"
        android:textSize="25sp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/bathroom_towels"
        card_view:layout_constraintLeft_toLeftOf="@+id/bathroom_towels" />
</android.support.constraint.ConstraintLayout>
