<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.milanparikh.hotelmonitor.MainActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/hampton_logo"
        android:layout_width="300dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/hampton"
        app:layout_constraintTop_toBottomOf="@+id/login_toolbar"
        app:layout_constraintBottom_toTopOf="@+id/username_edittext"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <EditText
        android:id="@+id/username_edittext"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        app:layout_constraintBottom_toTopOf="@+id/password_edittext"
        app:layout_constraintTop_toBottomOf="@+id/hampton_logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/username_edittext"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext"
        app:layout_constraintLeft_toLeftOf="@+id/password_edittext"
        app:layout_constraintRight_toLeftOf="@+id/register_button"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/login_button"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/password_edittext"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext"
        app:layout_constraintVertical_bias="0.5" />


</android.support.constraint.ConstraintLayout>
